--- a/methods/keys.ui
+++ b/methods/keys.ui
@@ -6,9 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>893</width>
-    <height>499</height>
+    <width>825</width>
+    <height>468</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>825</width>
+    <height>468</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>825</width>
+    <height>468</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Ключи</string>
@@ -40,7 +58,8 @@ background-color: #2A2F41;</string>
          </size>
         </property>
         <property name="styleSheet">
-         <string notr="true">color: rgb(255, 255, 255);</string>
+         <string notr="true">color: rgb(255, 255, 255);
+font: 75 11pt &quot;MS Shell Dlg 2&quot;;</string>
         </property>
         <property name="text">
          <string>Пароль</string>
@@ -54,7 +73,8 @@ background-color: #2A2F41;</string>
          </size>
         </property>
         <property name="styleSheet">
-         <string notr="true">color: rgb(255, 255, 255);</string>
+         <string notr="true">color: rgb(255, 255, 255);
+font: 75 11pt &quot;MS Shell Dlg 2&quot;;</string>
         </property>
         <property name="text">
          <string>Внешний ЭК</string>
@@ -81,6 +101,82 @@ border-radius:15px;</string>
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">font: 75 11pt &quot;MS Shell Dlg 2&quot;;
+border: 0px;</string>
+          </property>
+          <property name="text">
+           <string>Пароль:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1" colspan="2">
+         <widget class="QLineEdit" name="lineEdit">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">font: 75 11pt &quot;MS Shell Dlg 2&quot;;
+border-radius:7px;
+background-color: #595F76;
+
+color: rgb(255, 255, 255);</string>
+          </property>
+          <property name="echoMode">
+           <enum>QLineEdit::Password</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0" colspan="2">
+         <widget class="QLabel" name="label_2">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">font: 75 11pt &quot;MS Shell Dlg 2&quot;;
+border: 0px;</string>
+          </property>
+          <property name="text">
+           <string>Пароль ещё раз:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QLineEdit" name="lineEdit_2">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">font: 75 11pt &quot;MS Shell Dlg 2&quot;;
+border-radius:7px;
+background-color: #595F76;
+
+color: rgb(255, 255, 255);</string>
+          </property>
+          <property name="echoMode">
+           <enum>QLineEdit::Password</enum>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </item>
      <item>
@@ -106,6 +202,7 @@ border-radius:15px;</string>
  color: white;
 border-radius: 7px;
 background-color: #595F76;
+	font: 75 11pt &quot;MS Shell Dlg 2&quot;;
 }
 QPushButton:hover{
 background-color: #50566E;
@@ -123,6 +220,7 @@ QPushButton:pressed{
          <string notr="true">QPushButton{
  color: white;
 border-radius: 7px;
+	font: 75 11pt &quot;MS Shell Dlg 2&quot;;
 background-color: #595F76;
 }
 QPushButton:hover{
